tests/ui/suggestions/suggest-variants.stderr
error[E0599]: no variant named `Squareee` found for enum `Shape`
  --> $DIR/suggest-variants.rs:12:41
   |
LL | enum Shape {
   | ---------- variant `Squareee` not found here
...
LL |     println!("My shape is {:?}", Shape::Squareee { size: 5});
   |                                         ^^^^^^^^
   |
help: there is a variant with a similar name
   |
LL -     println!("My shape is {:?}", Shape::Squareee { size: 5});
LL +     println!("My shape is {:?}", Shape::Square { size: 5});
   |

error[E0599]: no variant named `Circl` found for enum `Shape`
  --> $DIR/suggest-variants.rs:13:41
   |
LL | enum Shape {
   | ---------- variant `Circl` not found here
...
LL |     println!("My shape is {:?}", Shape::Circl { size: 5});
   |                                         ^^^^^
   |
help: there is a variant with a similar name
   |
LL |     println!("My shape is {:?}", Shape::Circle { size: 5});
   |                                              +

error[E0599]: no variant named `Rombus` found for enum `Shape`
  --> $DIR/suggest-variants.rs:14:41
   |
LL | enum Shape {
   | ---------- variant `Rombus` not found here
...
LL |     println!("My shape is {:?}", Shape::Rombus{ size: 5});
   |                                         ^^^^^^ variant not found in `Shape`

error[E0599]: no variant or associated item named `Squareee` found for enum `Shape` in the current scope
  --> $DIR/suggest-variants.rs:15:12
   |
LL | enum Shape {
   | ---------- variant or associated item `Squareee` not found for this enum
...
LL |     Shape::Squareee;
   |            ^^^^^^^^ variant or associated item not found in `Shape`
   |
help: there is a variant with a similar name
   |
LL -     Shape::Squareee;
LL +     Shape::Square { size: /* value */ };
   |

error[E0599]: no variant or associated item named `Circl` found for enum `Shape` in the current scope
  --> $DIR/suggest-variants.rs:16:12
   |
LL | enum Shape {
   | ---------- variant or associated item `Circl` not found for this enum
...
LL |     Shape::Circl;
   |            ^^^^^ variant or associated item not found in `Shape`
   |
help: there is a variant with a similar name
   |
LL |     Shape::Circle { radius: /* value */ };
   |                 +++++++++++++++++++++++++

error[E0599]: no variant or associated item named `Rombus` found for enum `Shape` in the current scope
  --> $DIR/suggest-variants.rs:17:12
   |
LL | enum Shape {
   | ---------- variant or associated item `Rombus` not found for this enum
...
LL |     Shape::Rombus;
   |            ^^^^^^ variant or associated item not found in `Shape`

error[E0599]: no variant or associated item named `Redd` found for enum `Color` in the current scope
  --> $DIR/suggest-variants.rs:28:13
   |
LL | enum Color {
   | ---------- variant or associated item `Redd` not found for this enum
...
LL |   Ok(Color::Redd)
   |             ^^^^ variant or associated item not found in `Color`
   |
help: there is a variant with a similar name
   |
LL -   Ok(Color::Redd)
LL +   Ok(Color::Red)
   |

error[E0599]: no variant or associated item named `Greenn` found for enum `Color` in the current scope
  --> $DIR/suggest-variants.rs:32:13
   |
LL | enum Color {
   | ---------- variant or associated item `Greenn` not found for this enum
...
LL |   Ok(Color::Greenn(()))
   |             ^^^^^^ variant or associated item not found in `Color`
   |
help: there is a variant with a similar name
   |
LL -   Ok(Color::Greenn(()))
LL +   Ok(Color::Green(()))
   |

error[E0599]: no variant or associated item named `Blu` found for enum `Color` in the current scope
  --> $DIR/suggest-variants.rs:36:13
   |
LL | enum Color {
   | ---------- variant or associated item `Blu` not found for this enum
...
LL |   Ok(Color::Blu)
   |             ^^^ variant or associated item not found in `Color`
   |
help: there is a variant with a similar name
   |
LL |   Ok(Color::Blue)
   |                +

error[E0599]: no variant named `Alph` found for enum `Color`
  --> $DIR/suggest-variants.rs:40:13
   |
LL | enum Color {
   | ---------- variant `Alph` not found here
...
LL |   Ok(Color::Alph{ a: 255 })
   |             ^^^^
   |
help: there is a variant with a similar name
   |
LL |   Ok(Color::Alpha{ a: 255 })
   |                 +

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0599`.
